# punkyoi

./: .gitignore  CMakeLists.txt  Makefile  Punkyoi.make  README.md  build.sh  premake5.lua
assets/: assets.json
lib/: CMakeLists.txt
lib/win_precomp/: glew32s.lib
src/: main.cpp
src/api/: IImage.h  IRender.h  IRenderContext.h  iassetmanager.h  iimage.h  irender.h  irendercontext.h  irenderer.h  isound.h  isoundengine.h  iwindow.h  kit.h  object.h  vec2d.cpp  vec2d.h
src/api/events/: Event.h  EventBus.cpp  EventBus.h  event.cpp  event.h  eventbus.cpp  eventbus.h
src/api/math/: matrix.h  utils.h  vec2d.cpp  vec2d.h
src/api/net/: Message.h  client.cpp  client.h  connection.cpp  connection.h  message.cpp  message.h  server.cpp  server.h  tsqueue.h  utils.h
src/api/utils/: logger.cpp  logger.h
src/game/: app.cpp  app.h  core.h  singleton.h  window.h
src/game/common/: assetmanager.cpp  assetmanager.h  entity.cpp  entity.h  entityblueprint.cpp  entityblueprint.h  exception.h  input.h  iworldprovider.h  scene.cpp  scene.h  soundengine.cpp  soundengine.h  world.cpp  world.h
src/game/concrete/: dinoworld.cpp  dinoworld.h  dinoworldprovider.cpp  dinoworldprovider.h  entitybackground.cpp  entitybackground.h  entityenemy.cpp  entityenemy.h  entityplayer.cpp  entityplayer.h  levelcontroller.cpp  levelcontroller.h  uiscreen.cpp  uiscreen.h
src/game/events/: game_events.h
src/game/platform/: platform.h  platform_factory.h
src/game/platform/linux/: assetmanager.cpp  assetmanager.h  linux_factory.cpp  linux_factory.h  renderer.cpp  renderer.h  window.cpp  window.cpp.disable  window.h
src/game/platform/windows/: assetmanager.cpp  assetmanager.h  renderer.cpp  renderer.h  window.cpp  window.h  windows_factory.cpp  windows_factory.h
